# cube

./: Cargo.toml  README.md  shell.nix
src/: cube.rs  fragment_shader.frag  main.rs  rotation.rs  vertex_shader.vert
