[package]
name = "cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
itertools = "0.10.5"
mio = "0.8.11"
nalgebra = "0.32.2"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
